Fixed Footer & Responsive

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default next-quest" data-dismiss="modal">
-						Next Question
+						Next
 					</button>
 				</div>
 			</div><!-- /.modal-content -->
@@ -233,9 +233,9 @@
 		</div>
 	</div>
 
-	<!-- footer>
-		<p>© Edoe Cohen Productions 2014</p>
-	</footer -->
+	<footer class="foot">
+		<!--p>© Edoe Cohen Productions 2014</p-->
+	</footer>
 	
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
