Finished App & Added more Leaders

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 					</div>
 				</div>
 				<div class="modal-footer end-footer">
-					Want to play again?
+					Play again & discover additional Israeli leaders!  
 					<button type="button" class="btn btn-primary restart" data-dismiss="modal">
-						Yes!
+						Play Again
 					</button>
 				</div>
 			</div><!-- /.modal-content -->
