Remove Omanoot link from logo

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<div class="logo">
-					<a href="http://www.omanoot.com/products/safety-israel-pin" target="_blank">
-						<img src="images/Israel_pin.jpg" /></a>
+						<img src="images/Israel_pin.jpg" />
 					Zionism 101 Quiz
 				</div>
 				<ul class="nav-right">
