Removes Omanoot links from site

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<div class="logo">
-					<a href="http://www.omanoot.com/products/safety-israel-pin" target="_blank">
-						<img src="images/Israel_pin.jpg" /></a>
+						<img src="images/Israel_pin.jpg" />
 					Zionism 101 Quiz
 				</div>
 				<ul class="nav-right">
@@ -174,8 +173,8 @@
 		<div class="row">
 <!-- LEADERS IMAGE -->
 			<div class="leaderpic col-md-6">
-				<a href="http://www.omanoot.com/products/theodore-herzl" target="_blank"><img class="leaderimg" src="images/Herzl_1.jpg"></a>
-				<a class="caption" href="http://www.omanoot.com/products/theodore-herzl" target="_blank">Illustration by Amit Shimoni</a>
+				<img class="leaderimg" src="images/Herzl_1.jpg">
+				<div class="caption">Illustration by Amit Shimoni</div>
 			</div>
 
 <!-- FORK IMAGE -->
