--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Zionism 101 Quiz</title>
+	<title>Quiz</title>
+	<meta name="description" content="Can you answer all our questions correctly based on what you learned today?">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css" />
-	<link rel="icon" href="images/favicon.jpg" />
 	<link href='http://fonts.googleapis.com/css?family=Lemon|Cardo:400,400italic,700' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 	<script src="js/jquery.ui.touch-punch.min.js"></script>
-	<meta property="og:title" content="Zionism 101 Quiz" />
-	<meta property="og:description" content="You've bought Israel Bonds, but do you really know your Zionism? Take this short colorful quiz about Israel's founding fathers and mothers to find out!" />
-	<meta property="og:image" content="http://edoecohen.com/apps/zionism-101/images/Ben-Gurion_1.jpg" />
 </head>
 
 <body>     
