--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 						<div class="col-md-7">						
 							<p class="modal-score">
 								You've earned:
-								<img src="images/state_semel.png" />
 								20
 							</p>
 							<p class="modal-answer">C. The Dreyfus Affair</p>
@@ -101,24 +100,18 @@
 							</p>
 							<p>
 								And you earned:
-								<img src="images/state_semel.png" />
 								<span class="scoreTotal">20</span>
 							</p>
 							<p class="feedback">
 								You're a real chalutz! When are we making aliya?
 							</p>
-							<div class="share">		
-								Share: 
-								<a href="https://www.facebook.com/sharer/sharer.php?u=http://edoecohen.com/apps/zionism-101/" target="_blank">Facebook</a>
-								<a href="https://twitter.com/share?url=http%3A%2F%2Fedoecohen.com%2Fapps%2Fzionism-101&text=Test%20your%20knowledge%20of%20Israel's%20founding%20fathers%20%26%20mothers%20with%20this%20quick%20quiz!%20via%20@omanoot%20#Zionism" title="Share on Twitter" target="_blank">Twitter</a>
-							</div>
 						</div>
 					</div>
 				</div>
 				<div class="modal-footer end-footer">
-					Play again & discover additional Israeli leaders!  
+					Play again?  
 					<button type="button" class="btn btn-primary restart" data-dismiss="modal">
-						Play Again
+						Yeah, Let's Do It!
 					</button>
 				</div>
 			</div><!-- /.modal-content -->
@@ -133,10 +126,9 @@
 	        <div class="col-lg-12">
 	            <div class="row ">
 	                <div class="col-md-6 col-md-offset-3 intro-main">
-	                	<img class="intro-img" src="images/Israel_pin.jpg" />
 						<div class="intro-text">
-	                		<h1>Zionism 101 Quiz</h1>
-							<a href="">Yallah, let's start!</a>
+	                		<h1>Historic Washington State Park Quiz</h1>
+							<a href="">Let's Begin!</a>
 						</div>
 	                </div>
 	            </div>
@@ -150,15 +142,13 @@
 		<div class="container">
 			<div class="navbar-header">
 				<div class="logo">
-						<img src="images/Israel_pin.jpg" />
-					Zionism 101 Quiz
+					Historic Washington State Park Quiz
 				</div>
 				<ul class="nav-right">
 					<li>
 						<span class="glyphicon glyphicon-refresh" data-toggle="tooltip" title="Restart"></span>
 					</li>
 					<li class="score">
-						<img src="images/state_semel.png" />
 						<span class="score-num">0</span>
 					</li>
 				</ul>
