--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="col-md-7">						
 							<p class="modal-score">
 								You've earned:
-								20
+								20 points
 							</p>
 							<p class="modal-answer">C. The Dreyfus Affair</p>
 							<p class="explain-text">In 1894, Captain Alfred Dreyfus, a Jewish officer in the French army, was unjustly accused of treason, mainly because of the prevailing anti-Semitic atmosphere.<br>
@@ -101,7 +101,7 @@
 							</p>
 							<p>
 								And you earned:
-								<span class="scoreTotal">20</span>
+								<span class="scoreTotal">20</span> points
 							</p>
 							<p class="feedback">
 								You're a real chalutz! When are we making aliya?
